# limmaGenie-react-python-app

./: .gitignore  README.md  azure_deployment.sh  dev.sh  directory_frontend.txt  docker-compose.yml  todo.md
.github/workflows/: backend.yml  frontend.yml  limmagenie-backend-AutoDeployTrigger-37a1f7a4-f591-4ee0-b439-12b0ece25714.yml
backend/: .dockerignore  .gitignore  Dockerfile  app.py  docker_runner.sh  pyproject.toml  todo.md
backend/limmaGenie/: answer_reranker.py  answers_retrieval.py  imported_apis.py  mongo_database_connection.py  process_vectorsearch.py  search.py  variables.py  web_search.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  todo.md  vite.config.js
frontend/src/: API.js  App.css  App.jsx
frontend/src/components/: ChatPage.jsx  Header.jsx  HomePage.jsx  MessgeInput.jsx  utils.jsx
