[project]
name = "limmaGenie"
version = "0.1.0"
description = "limmaGenie - AI assistant for limma analysis"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.129.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
[tool.mypy]
mypy_path = "limmaGenie_backend"

[tool.pyright]
pythonPath = "limmaGenie_backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["limmaGenie"]
